Fixed TopMenu x overflow

--- a/src/components/Layout/Layout.sass
+++ b/src/components/Layout/Layout.sass
@@ -1,5 +1,4 @@
 .layout
-  width: 100vw
   height: 100vh
   justify-content: center
   align-items: center
