--- a/src/components/Menus/TopMenu/TopMenu.sass
+++ b/src/components/Menus/TopMenu/TopMenu.sass
@@ -4,7 +4,6 @@
   top: 0
   left: 0
   color: #fff
-  width: 100vw
   display: flex
   flex-direction: column
   flex-shrink: 0
