--- a/src/global.css
+++ b/src/global.css
@@ -17,6 +17,7 @@ body {
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
+  overflow-y: hidden;
 }
 
 .separator::before {
@@ -37,4 +38,8 @@ p {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.PageContainer {
+  width: 100vw;
 }
